# backend-comparathor

./: .env  .pre-commit-config.yaml  Dockerfile  environment.yml  pyproject.toml  requirements.txt
app/: api.py  database.py  events.py  initializer.py  main.py  utils.py
app/initializers/: comparison_products.py  comparisons.py  product_metadata.py  product_types.py  products.py  users.py
app/middlewares/: cors.py
app/models/: comparison.py  product.py  user.py
app/resources/: comparisons.yml  products.yml  users.yml
app/routes/: admin.py  auth.py  comparisons.py  products.py  products_types.py
app/schemas/: comparison.py  product.py  user.py
tests/integration/: api.py  test_api.py
tests/unit/: utils.py
