[tool.poetry]
name = "comparathor"
version = "0.1.0"
description = ""
authors = ["Antonio Cuadrado Cobo"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
requests = ">=2.32.3,<2.33.0"
pandas = ">=2.2.3,<2.3.0"
openpyxl = "3.1.5"
click = "8.1.7"
python-dotenv = ">=1.0.1,<1.1.0"
tqdm = "^4.67.1"


[tool.poetry.group.dev.dependencies]
pytest = ">=8.3.3,<8.4.0"

[tool.ruff]
line-length = 88
per-file-ignores = { "__init__.py" = ["F401"], "**/{tests}/*" = ["E402", "F401"]  }

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
